--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "azure-storage": "^2.10.5",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
+    "express-json-validator-middleware": "^2.2.1",
     "express-validator": "^6.13.0",
     "fs": "^0.0.1-security",
     "helmet": "^4.6.0",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.3",
     "mysql": "^2.18.1",
     "uuid": "^8.3.2"
   }
