--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "ajv": "^8.8.2",
     "azure-storage": "^2.10.5",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
-    "express-json-validator-middleware": "^2.2.1",
     "express-validator": "^6.13.0",
     "fs": "^0.0.1-security",
     "helmet": "^4.6.0",
