--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "helmet": "^4.6.0",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
